Imagenes de producto de maquina expendedora listas

--- a/tarea08_maquina_expendedora/index.html
+++ b/tarea08_maquina_expendedora/index.html
@@ -10,32 +10,32 @@
     <div class="maquina">
         <div class="panel-productos">
             <div class="producto" data-codigo="A1">
-                <img src="https://i.imgur.com/g8L3Yj2.png" alt="Nito">
+                <img src="images/nito.png" alt="Nito">
                 <p>Nito <br> $18.00</p>
                 <span>A1</span>
             </div>
             <div class="producto" data-codigo="A2">
-                <img src="https://i.imgur.com/v8F3bX3.png" alt="Doritos">
-                <p>Doritos <br> $17.00</p>
+                <img src="images/chetos.png" alt="Chetos">
+                <p>Chetos <br> $17.00</p>
                 <span>A2</span>
             </div>
             <div class="producto" data-codigo="A3">
-                <img src="https://i.imgur.com/O1b3dJt.png" alt="Sabritas">
+                <img src="images/sabritas.png" alt="Sabritas">
                 <p>Sabritas <br> $16.00</p>
                 <span>A3</span>
             </div>
             <div class="producto" data-codigo="B1">
-                <img src="https://i.imgur.com/yWaWfQp.png" alt="Del Valle">
+                <img src="images/del_valle.png" alt="Del Valle">
                 <p>Del Valle <br> $20.00</p>
                 <span>B1</span>
             </div>
             <div class="producto" data-codigo="B2">
-                <img src="https://i.imgur.com/fP5gSjQ.png" alt="Magdalenas">
-                <p>Magdalenas <br> $22.00</p>
+                <img src="images/mantecadas.png" alt="Mantecadas">
+                <p>Mantecadas <br> $22.00</p>
                 <span>B2</span>
             </div>
             <div class="producto" data-codigo="B3">
-                <img src="https://i.imgur.com/v8F3bX3.png" alt="Ruffles">
+                <img src="images/ruffles.png" alt="Ruffles">
                 <p>Ruffles <br> $17.00</p>
                 <span>B3</span>
             </div>
