Boton para pedir cambio y guardar saldo integrados

--- a/tarea08_maquina_expendedora/index.html
+++ b/tarea08_maquina_expendedora/index.html
@@ -48,12 +48,14 @@
         </div>
 
         <div class="panel-control">
-            <div class="pantalla" id="pantalla">Bienvenido</div>
+            <div class="pantalla" id="pantalla">Saldo: $0.00</div>
 
             <div class="panel-instrucciones">
                 <p>1. Inserte dinero</p>
                 <p>2. Escriba el código (ej: A1)</p>
                 <p>3. Presione "Seleccionar"</p>
+                <p>4. Repita el proceso con todos los productos que desee comprar</p>
+                <p>5. Presione "Pedir Cambio" para recuperar su dinero</p>
             </div>
             
             <div class="teclado">
@@ -83,7 +85,7 @@
                     <div class="bandeja" id="bandeja-cambio"></div>
                 </div>
             </div>
-            <button id="btn-cancelar">Cancelar / Devolver</button>
+            <button id="btn-cancelar">Pedir Cambio</button>
         </div>
     </div>
 
